src/objects/Questions__c.object
<CustomObject>
    <fields>
        <fullName>Default_Study_Field__c</fullName>
        <label>Study Field API</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dependent_Question__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dependent Question</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Dependent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Dependent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Help_Text__c</fullName>
        <label>Help Text</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_Text_TF__c</fullName>
        <label>Question Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_Text__c</fullName>
        <label>Question Text</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Type__c</fullName>
        <label>Response Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dropdown</fullName>
                </value>
                <value>
                    <fullName>Checkbox</fullName>
                </value>
                <value>
                    <fullName>Comments</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Study_Dependent__c</fullName>
        <inlineHelpText>Enter Study Field Label here.</inlineHelpText>
        <label>Study Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Question_Text__c</columns>
        <columns>Study_Dependent__c</columns>
        <columns>Default_Study_Field__c</columns>
        <columns>Dependent_Question__c</columns>
        <columns>Response_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Active_Questions</fullName>
        <columns>NAME</columns>
        <columns>Question_Text__c</columns>
        <columns>Study_Dependent__c</columns>
        <columns>Default_Study_Field__c</columns>
        <columns>Response_Type__c</columns>
        <columns>Dependent_Question__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Active Questions</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Q-{000}</displayFormat>
        <label>Questions Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>